--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -3,24 +3,20 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <link rel="stylesheet" href="format.css">
-    <title>URL shortener</title>
+    <link rel="stylesheet" href="style.css">
+    <title>URLAlias</title>
 </head>
 <body>
-<div>
 
-    <h4 th:if="${hasMessage}" th:text="${message}"></h4>
+    <h3 th:if="${hasMessage}" th:text="${message}" th:style="${stored ? 'color: red;' : 'color: black;'}" ></h3>
+    <form th:action="@{save-link}" method="post" th:object="${urlAlias}">
+        <label for="url">URL</label>
+        <input id="url" type="text" th:field="*{url}">
+        <label for="alias">Alias</label>
+        <input id="alias" type="text" th:field="*{alias}" >
 
-    <form action="#" th:action="@{/save-link}" th:object="${urlItem}" method="post">
-        <label for="title">URL</label>
-        <input type="text" name="title" id="title" th:field="*{url}" required>
-
-        <label for="author">Alias</label>
-        <input type="text" name="author" id="author" th:field="*{alias}" required>
-
-        <button type="submit">Submit</button>
+        <button th:type="submit">Submit</button>
     </form>
-</div>
 
 </body>
 </html>
